// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component  should match the snapshot 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-0-label"
      autocomplete="off"
      id="downshift-0-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-0"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-1-label"
      autocomplete="off"
      id="downshift-1-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-1"
      role="button"
      type="button"
    >
      Dropdown placeholder
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-2-label"
      autocomplete="off"
      id="downshift-2-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-2"
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 4`] = `
.c5 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  border-color: #e91b0c;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #e91b0c;
  box-shadow: 0px 3px 1px -2px rgba(233,27,12,0.2),0px 2px 2px 0px rgba(233,27,12,0.14),0px 1px 5px 0px rgba(233,27,12,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-3-label"
      autocomplete="off"
      id="downshift-3-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-3"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
  <span
    class="c5"
  >
    Error message
  </span>
</div>
`;

exports[`Dropdown component  should match the snapshot 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-4-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-4-label"
      autocomplete="off"
      id="downshift-4-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      disabled=""
      id="dropdown-4"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c5 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-5-label"
    class="c1"
    role="combobox"
  >
    <label
      class="c2"
      for="dropdown-5"
      id="downshift-5-label"
    >
      Dropdown label
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-5-label"
      autocomplete="off"
      id="downshift-5-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c3 c4"
      data-toggle="true"
      id="dropdown-5"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c5 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c4 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c4::-webkit-inner-spin-button,
.c4::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-calendar-picker-indicator,
.c4::-webkit-search-cancel-button {
  display: none;
}

.c4::-ms-clear {
  display: none;
}

.c4:hover,
.c4:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c4[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c4:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c4[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c3 {
  color: #ec584e;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c6 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-6-label"
    class="c1"
    role="combobox"
  >
    <label
      class="c2"
      for="dropdown-6"
      id="downshift-6-label"
    >
      Dropdown label
      <em
        class="c3"
      >
        *
      </em>
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-6-label"
      autocomplete="off"
      id="downshift-6-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c4 c5"
      data-toggle="true"
      id="dropdown-6"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c6 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 8`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  padding: 8px 48px 8px 16px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-7-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-7-label"
      autocomplete="off"
      id="downshift-7-input"
      name=""
      type="hidden"
      value=""
    />
    <div
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-7-label"
        autocomplete="off"
        class="c2 c3"
        id="dropdown-7"
        placeholder="Select an option"
        style="cursor: inherit;"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 9`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-8-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-8-label"
      autocomplete="off"
      id="downshift-8-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-8"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 10`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-9-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-9-label"
      autocomplete="off"
      id="downshift-9-input"
      name=""
      type="hidden"
      value="baz"
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-9"
      role="button"
      type="button"
    >
      baz
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 11`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c5 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-10-label"
    class="c1"
    role="combobox"
  >
    <label
      class="c2"
      for="dropdown-10"
      id="downshift-10-label"
    >
      choose a credit card
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-10-label"
      autocomplete="off"
      id="downshift-10-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c3 c4"
      data-toggle="true"
      id="dropdown-10"
      role="button"
      type="button"
    >
      What credit card do you prefer?
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c5 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 12`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-11-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-11-label"
      autocomplete="off"
      id="downshift-11-input"
      name="dropdown-name"
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-11"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-12-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-12-label"
      autocomplete="off"
      id="downshift-12-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-12"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-13-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-13-label"
      autocomplete="off"
      id="downshift-13-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-13"
      role="button"
      type="button"
    >
      Dropdown placeholder
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-14-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-14-label"
      autocomplete="off"
      id="downshift-14-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-14"
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 4`] = `
.c5 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  border-color: #e91b0c;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #e91b0c;
  box-shadow: 0px 3px 1px -2px rgba(233,27,12,0.2),0px 2px 2px 0px rgba(233,27,12,0.14),0px 1px 5px 0px rgba(233,27,12,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-15-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-15-label"
      autocomplete="off"
      id="downshift-15-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      id="dropdown-15"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
  <span
    class="c5"
  >
    Error message
  </span>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c4 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-16-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-16-label"
      autocomplete="off"
      id="downshift-16-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c2 c3"
      data-toggle="true"
      disabled=""
      id="dropdown-16"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c5 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-17-label"
    class="c1"
    role="combobox"
  >
    <label
      class="c2"
      for="dropdown-17"
      id="downshift-17-label"
    >
      Dropdown label
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-17-label"
      autocomplete="off"
      id="downshift-17-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c3 c4"
      data-toggle="true"
      id="dropdown-17"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c5 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c4 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c4::-webkit-inner-spin-button,
.c4::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-calendar-picker-indicator,
.c4::-webkit-search-cancel-button {
  display: none;
}

.c4::-ms-clear {
  display: none;
}

.c4:hover,
.c4:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c4[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c4:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c4[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c3 {
  color: #ec584e;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c6 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-18-label"
    class="c1"
    role="combobox"
  >
    <label
      class="c2"
      for="dropdown-18"
      id="downshift-18-label"
    >
      Dropdown label
      <em
        class="c3"
      >
        *
      </em>
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-18-label"
      autocomplete="off"
      id="downshift-18-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="c4 c5"
      data-toggle="true"
      id="dropdown-18"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c6 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 8`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  padding: 8px 48px 8px 16px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-19-label"
    class="c1"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-19-label"
      autocomplete="off"
      id="downshift-19-input"
      name=""
      type="hidden"
      value=""
    />
    <div
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-19-label"
        autocomplete="off"
        class="c2 c3"
        id="dropdown-19"
        placeholder="Select an option"
        style="cursor: inherit;"
        value=""
      />
    </div>
  </div>
</div>
`;
